Camelcase everything in the exit scenarios directive

--- a/public/investment_properties_pages/financials/outputs/exitScenarios.html
+++ b/public/investment_properties_pages/financials/outputs/exitScenarios.html
@@ -10,25 +10,25 @@
   <div class="row">
     <div class="col-sm-5 align-left">1 Year Exit</div>
     <div class="col-sm-1 align-right column-header"></div>
-    <div class="col-sm-3 align-right">{{first_year_exit_price | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{first_year_gain_on_sale | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{cap_rate | percentage:2}}</div>
-    <div class="col-sm-3 align-right">{{one_year_irr | percentage:2}}</div>
+    <div class="col-sm-3 align-right">{{firstYearExitPrice | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{firstYearGainOnSale | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{capRate | percentage:2}}</div>
+    <div class="col-sm-3 align-right">{{oneYearIrr | percentage:2}}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 align-left">3 Year Exit</div>
     <div class="col-sm-1 align-right column-header"></div>
-    <div class="col-sm-3 align-right">{{third_year_exit_price | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{cap_rate | percentage:2}}</div>
-    <div class="col-sm-3 align-right">{{three_year_irr | percentage:2}}</div>
+    <div class="col-sm-3 align-right">{{thirdYearExitPrice | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{thirdYearGainOnSale | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{capRate | percentage:2}}</div>
+    <div class="col-sm-3 align-right">{{threeYearIrr | percentage:2}}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 align-left">5 Year Exit</div>
     <div class="col-sm-1 align-right column-header"></div>
-    <div class="col-sm-3 align-right">{{fifth_year_exit_price | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{fifth_year_gain_on_sale | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{cap_rate | percentage:2}}</div>
-    <div class="col-sm-3 align-right">{{five_year_irr | percentage:2}}</div>
+    <div class="col-sm-3 align-right">{{fifthYearExitPrice | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{fifthYearGainOnSale | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{capRate | percentage:2}}</div>
+    <div class="col-sm-3 align-right">{{fiveYearIrr | percentage:2}}</div>
   </div>
 </div>
