--- a/public/investment_properties_pages/financials/outputs/financingAssumptions.html
+++ b/public/investment_properties_pages/financials/outputs/financingAssumptions.html
@@ -5,22 +5,22 @@
   <div class="row" id="total-purchase">
     <span class="col-sm-12">Total Purchase</span>
     <span class="col-sm-6 align-right">100%</span>
-    <span class="col-sm-6 align-right">{{total_cost | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{totalCost | currency:'$':0}}</span>
   </div>
   <div class="row" id="down-payment">
     <span class="col-sm-12">Owner's Equity</span>
-    <span class="col-sm-6 align-right">{{equity_percentage | percentage:0}}</span>
-    <span class="col-sm-6 align-right">{{down_payment | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{equityPercentage | percentage:0}}</span>
+    <span class="col-sm-6 align-right">{{downPayment | currency:'$':0}}</span>
   </div>
   <div class="row" id="balance-to-finance">
     <span class="col-sm-12">Balance to Finance</span>
-    <span class="col-sm-6 align-right">{{balance_to_finance_percentage | percentage}}</span>
-    <span class="col-sm-6 align-right">{{balance_to_finance | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{balanceToFinancePercentage | percentage}}</span>
+    <span class="col-sm-6 align-right">{{balanceToFinance | currency:'$':0}}</span>
   </div>
   <div class="row" id="interest-rate">
     <span class="col-sm-12">Interest Rate</span>
     <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.loan_interest_rate | percentage:3}}</span>
-    <span class="col-sm-6 align-right">{{monthly_interest_rate | percentage:3}}</span>
+    <span class="col-sm-6 align-right">{{monthlyInterestRate | percentage:3}}</span>
   </div>
   <br/>
   <div class="row">
@@ -31,11 +31,11 @@
   <div class="row" id="amortization-period">
     <span class="col-sm-12">Amortization Period</span>
     <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.amortization_period_in_years | number:0}}</span>
-    <span class="col-sm-6 align-right">{{amortization_period_in_months}}</span>
+    <span class="col-sm-6 align-right">{{amortizationPeriodInMonths}}</span>
   </div>
   <div class="row" id="loan-payment">
     <span class="col-sm-12">Payment</span>
-    <span class="col-sm-6 align-right">{{annual_loan_payment | currency:'$':0}}</span>
-    <span class="col-sm-6 align-right">{{monthly_loan_payment | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{annualLoanPayment | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{monthlyLoanPayment | currency:'$':0}}</span>
   </div>
 </div>
