--- a/public/investment_properties_pages/financials/outputs/netCashFlows.html
+++ b/public/investment_properties_pages/financials/outputs/netCashFlows.html
@@ -5,19 +5,19 @@
   <div class="row">
     <div class="col-sm-5 align-left">1 Yr Exit</div>
     <div class="col-sm-2 align-right"></div>
-    <div class="col-sm-2 align-right">{{monthly_cash_flow | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right">{{one_year_exit_net | currency:'$':0}}</div>
+    <div class="col-sm-2 align-right">{{monthlyCashFlow | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right">{{oneYearExitNet | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 align-left">3 Yr Exit</div>
     <div class="col-sm-2 align-right"></div>
-    <div class="col-sm-2 align-right">{{monthly_cash_flow | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right" ng-repeat="net in three_year_exit_nets track by $index">{{net | currency:'$':0}}</div>
+    <div class="col-sm-2 align-right">{{monthlyCashFlow | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right" ng-repeat="net in threeYearExitNets track by $index">{{net | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 align-left">5 Yr Exit</div>
     <div class="col-sm-2 align-right"></div>
-    <div class="col-sm-2 align-right">{{monthly_cash_flow | currency:'$':0}}</div>
-    <div class="col-sm-3 align-right" ng-repeat="net in five_year_exit_nets track by $index">{{net | currency:'$':0}}</div>
+    <div class="col-sm-2 align-right">{{monthlyCashFlow | currency:'$':0}}</div>
+    <div class="col-sm-3 align-right" ng-repeat="net in fiveYearExitNets track by $index">{{net | currency:'$':0}}</div>
   </div>
 </div>
