--- a/public/investment_properties_pages/financials/outputs/operatingExpense.html
+++ b/public/investment_properties_pages/financials/outputs/operatingExpense.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-5">{{expense.label}}</div>
-  <div class="col-sm-2 align-right" ng-class="border_style">{{expense.percentage | percentage:1}}</div>
-  <div class="col-sm-2 align-right" ng-class="border_style">{{expense.monthly_cost | currency:"$":0}}</div>
-  <div class="col-sm-3 align-right" ng-class="border_style" ng-repeat="cost in expense.yearly_costs track by $index">{{cost | currency:"$":0}}</div>
+  <div class="col-sm-2 align-right" ng-class="borderStyle">{{expense.percentage | percentage:1}}</div>
+  <div class="col-sm-2 align-right" ng-class="borderStyle">{{expense.monthly_cost | currency:"$":0}}</div>
+  <div class="col-sm-3 align-right" ng-class="borderStyle" ng-repeat="cost in expense.yearly_costs track by $index">{{cost | currency:"$":0}}</div>
 </div>
