--- a/public/investment_properties_pages/financials/outputs/operatingExpenses.html
+++ b/public/investment_properties_pages/financials/outputs/operatingExpenses.html
@@ -2,6 +2,6 @@
   <div class="row">
     <div class="col-sm-5 align-center subsection-header">Operating Expenses</div>
   </div>
-  <operating-expense expense="expense" ng-repeat="expense in individual_expenses"></operating-expense>
-  <operating-expense expense="total_expenses" add-border="true"></operating-expense>
+  <operating-expense expense="expense" ng-repeat="expense in individualExpenses"></operating-expense>
+  <operating-expense expense="totalExpenses" add-border="true"></operating-expense>
 </div>
