--- a/public/investment_properties_pages/financials/outputs/operatingRevenues.html
+++ b/public/investment_properties_pages/financials/outputs/operatingRevenues.html
@@ -6,32 +6,32 @@
     <div class="row">
       <div class="col-sm-5">Gross Scheduled Rent Income</div>
       <div class="col-sm-2"></div>
-      <div class="col-sm-2 align-right">{{monthly_gross_scheduled_rent_income | currency:"$":0}}</div>
-      <div class="col-sm-3 align-right" ng-repeat="rent in projected_gross_annual_rents track by $index">{{rent | currency:"$":0}}</div>
+      <div class="col-sm-2 align-right">{{monthlyGrossScheduledRentIncome | currency:"$":0}}</div>
+      <div class="col-sm-3 align-right" ng-repeat="rent in projectedGrossAnnualRents track by $index">{{rent | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-sm-5">Vacancy Rate</div>
       <div class="col-sm-2 align-right">{{rental_property.operating_expenses_assumption.vacancy_rate | percentage:1}}</div>
       <div class="col-sm-2 align-right add-border-bottom">{{vacancy | currency:"$":0}}</div>
-      <div class="col-sm-3 align-right add-border-bottom" ng-repeat="cost in projected_annual_vacancy_costs track by $index">{{cost | currency:"$":0}}</div>
+      <div class="col-sm-3 align-right add-border-bottom" ng-repeat="cost in projectedAnnualVacancyCosts track by $index">{{cost | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-sm-5">Net Rental Income</div>
       <div class="col-sm-2"></div>
-      <div class="col-sm-2 align-right">{{net_rental_income | currency:"$":0}}</div>
-      <div class="col-sm-3 align-right" ng-repeat="income in projected_annual_net_rental_incomes track by $index">{{income | currency:"$":0}}</div>
+      <div class="col-sm-2 align-right">{{netRentalIncome | currency:"$":0}}</div>
+      <div class="col-sm-3 align-right" ng-repeat="income in projectedAnnualNetRentalIncomes track by $index">{{income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-sm-5">Other Income</div>
       <div class="col-sm-2"></div>
-      <div class="col-sm-2 align-right add-border-bottom">{{other_income | currency:"$":0}}</div>
-      <div class="col-sm-3 align-right add-border-bottom" ng-repeat="income in projected_other_incomes track by $index">{{income | currency:"$":0}}</div>
+      <div class="col-sm-2 align-right add-border-bottom">{{otherIncome | currency:"$":0}}</div>
+      <div class="col-sm-3 align-right add-border-bottom" ng-repeat="income in projectedOtherIncomes track by $index">{{income | currency:"$":0}}</div>
     </div>
     <div class="row">
       <div class="col-sm-5">Gross Income</div>
       <div class="col-sm-2 align-right">100%</div>
-      <div class="col-sm-2 align-right">{{gross_income | currency:"$":0}}</div>
-      <div class="col-sm-3 align-right" ng-repeat="income in projected_gross_incomes track by $index">{{income | currency:"$":0}}</div>
+      <div class="col-sm-2 align-right">{{grossIncome | currency:"$":0}}</div>
+      <div class="col-sm-3 align-right" ng-repeat="income in projectedGrossIncomes track by $index">{{income | currency:"$":0}}</div>
     </div>
   </div>
 </div>
