Camelcase everything in the roi directive

--- a/public/investment_properties_pages/financials/outputs/returnOnInvestment.html
+++ b/public/investment_properties_pages/financials/outputs/returnOnInvestment.html
@@ -6,18 +6,18 @@
     <div class="col-sm-5 align-left">Net Operating Income</div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-2 align-right"></div>
-    <div class="col-sm-3 align-right" ng-repeat="roi in noi_roi track by $index">{{roi | percentage:2}}</div>
+    <div class="col-sm-3 align-right" ng-repeat="roi in noiRoi track by $index">{{roi | percentage:2}}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 align-left">Cash ROI</div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-2 align-right"></div>
-    <div class="col-sm-3 align-right" ng-repeat="roi in cash_roi track by $index">{{roi | percentage:2}}</div>
+    <div class="col-sm-3 align-right" ng-repeat="roi in cashRoi track by $index">{{roi | percentage:2}}</div>
   </div>
   <div class="row">
     <div class="col-sm-5 align-left">Total ROI</div>
     <div class="col-sm-2 align-right"></div>
     <div class="col-sm-2 align-right"></div>
-    <div class="col-sm-3 align-right" ng-repeat="roi in total_roi track by $index">{{roi | percentage:2}}</div>
+    <div class="col-sm-3 align-right" ng-repeat="roi in totalRoi track by $index">{{roi | percentage:2}}</div>
   </div>
 </div>
