--- a/public/investment_properties_pages/saveButton.html
+++ b/public/investment_properties_pages/saveButton.html
@@ -1,3 +1,3 @@
 <div class="row margin-top-sm">
-  <button class="btn btn-primary btn-sm btn-save" ng-click="save()">{{persistence_state}}</button>
+  <button class="btn btn-primary btn-sm btn-save" ng-click="save()">{{persistenceState}}</button>
 </div>
