Switch out the backend serialization to conform to camelCase json object keys with a root key, using the :json rails activemodel serializer adapter

--- a/public/investment_properties_pages/financials/inputs/closingCosts.html
+++ b/public/investment_properties_pages/financials/inputs/closingCosts.html
@@ -4,67 +4,67 @@
   </div>
   <div id="origination-fee" class="row">
     <span class="col-sm-18">Origination Fee</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.origination_fee | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.originationFee | currency}}</span>
   </div>
   <div id="processing-fee" class="row">
     <span class="col-sm-18">Processing Fee</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.processing_fee | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.processingFee | currency}}</span>
   </div>
   <div id="discount-points" class="row">
     <span class="col-sm-18">Discount Points</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.discount_points | number}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.discountPoints | number}}</span>
   </div>
   <div id="underwriting-fee" class="row">
     <span class="col-sm-18">Underwriting Fee</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.underwriting_fee | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.underwritingFee | currency}}</span>
   </div>
   <div id="appraisal" class="row">
     <span class="col-sm-18">Appraisal</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.appraisal | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.appraisal | currency}}</span>
   </div>
   <div id="flood-certificate" class="row">
     <span class="col-sm-18">Flood Certificate</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.flood_certificate | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.floodCertificate | currency}}</span>
   </div>
   <div id="credit-report" class="row">
     <span class="col-sm-18">Credit Report</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.credit_report | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.creditReport | currency}}</span>
   </div>
   <div id="tax-services" class="row">
     <span class="col-sm-18">Tax Services</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.tax_services | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.taxServices | currency}}</span>
   </div>
   <div id="title-insurance" class="row">
     <span class="col-sm-18">Title Insurance</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.title_insurance | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.titleInsurance | currency}}</span>
   </div>
   <div id="survey" class="row">
     <span class="col-sm-18">Survey</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.survey | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.survey | currency}}</span>
   </div>
   <div id="title-fees" class="row">
     <span class="col-sm-18">Title Fees</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.title_fees | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.titleFees | currency}}</span>
   </div>
   <div id="transfer-taxes" class="row">
     <span class="col-sm-18">Transfer Taxes</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.transfer_taxes | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.transferTaxes | currency}}</span>
   </div>
   <div id="government-recording-charges" class="row">
     <span class="col-sm-18">Government Recording Charges</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.government_recording_charges | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.governmentRecordingCharges | currency}}</span>
   </div>
   <div id="homeowners-insurance" class="row">
     <span class="col-sm-18">Homeowners Insurance</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.homeowners_insurance | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.homeownersInsurance | currency}}</span>
   </div>
   <div id="settlement-company-charges" class="row">
     <span class="col-sm-18">Settlement Company Charges</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.settlement_company_charges | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.settlementCompanyCharges | currency}}</span>
   </div>
   <div id="wire-charges" class="row">
     <span class="col-sm-18">Wire Charges</span>
-    <span class="col-sm-6 align-right">{{rental_property.closing_cost.wire_charges | currency}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.closingCost.wireCharges | currency}}</span>
   </div>
   <div id="total-closing-costs" class="row">
     <span class="col-sm-18 add-border-top">Total</span>
