--- a/public/investment_properties_pages/financials/inputs/incomeAndCostProjections.html
+++ b/public/investment_properties_pages/financials/inputs/incomeAndCostProjections.html
@@ -10,35 +10,35 @@
            name="year-one-rent-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.rent_increases[0]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.rentIncreases[0]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-two-rent-increases-input"
            name="year-two-rent-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.rent_increases[1]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.rentIncreases[1]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-three-rent-increases-input"
            name="year-three-rent-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.rent_increases[2]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.rentIncreases[2]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-four-rent-increases-input"
            name="year-four-rent-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.rent_increases[3]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.rentIncreases[3]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-five-rent-increases-input"
            name="year-five-rent-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.rent_increases[4]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.rentIncreases[4]"/>
   </div>
   <div id="operating-expense-increases" class="row">
     <div class="col-sm-9">Op Exp Increases</div>
@@ -48,34 +48,34 @@
            name="year-one-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.operating_expense_increases[0]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.operatingExpenseIncreases[0]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-two-operating-expenses-increases-input"
            name="year-two-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.operating_expense_increases[1]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.operatingExpenseIncreases[1]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-three-operating-expenses-increases-input"
            name="year-three-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.operating_expense_increases[2]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.operatingExpenseIncreases[2]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-four-operating-expenses-increases-input"
            name="year-four-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.operating_expense_increases[3]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.operatingExpenseIncreases[3]"/>
     <input class="col-sm-3 align-right"
            type="text"
            id="year-five-operating-expenses-increases-input"
            name="year-five-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.income_and_cost_projection.operating_expense_increases[4]"/>
+           ng-model="rentalProperty.incomeAndCostProjection.operatingExpenseIncreases[4]"/>
   </div>
 </div>
