--- a/public/investment_properties_pages/financials/inputs/operatingExpensesInputs.html
+++ b/public/investment_properties_pages/financials/inputs/operatingExpensesInputs.html
@@ -10,7 +10,7 @@
            name="vacancy-rate-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.operating_expenses_assumption.vacancy_rate"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.vacancyRate"/>
   </div>
   <div id="repairs-and-maintenance" class="row">
     <span class="col-sm-18">Repairs and Maintenance</span>
@@ -21,7 +21,7 @@
            format="currency"
            symbol="$"
            decimals="0"
-           ng-model="rental_property.operating_expenses_assumption.repairs_and_maintenance"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.repairsAndMaintenance"/>
   </div>
   <div id="property-management-fees" class="row">
     <span class="col-sm-18">Property Management Fees</span>
@@ -31,7 +31,7 @@
            name="property-management-fees-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.operating_expenses_assumption.property_management_fees"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.propertyManagementFees"/>
   </div>
   <div id="utilities" class="row">
     <span class="col-sm-18">Utilities</span>
@@ -40,7 +40,7 @@
            id="utilities-input"
            name="utilities-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.utilities"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.utilities"/>
   </div>
   <div id="taxes" class="row">
     <span class="col-sm-18">Taxes</span>
@@ -49,7 +49,7 @@
            id="taxes-input"
            name="taxes-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.taxes"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.taxes"/>
   </div>
   <div id="insurance" class="row">
     <span class="col-sm-18">Insurance</span>
@@ -58,7 +58,7 @@
            id="insurance-input"
            name="insurance-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.insurance"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.insurance"/>
   </div>
   <div id="salaries-and-wages" class="row">
     <span class="col-sm-18">Salaries and Wages</span>
@@ -67,7 +67,7 @@
            id="salaries-and-wages-input"
            name="salaries-and-wages-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.salaries_and_wages"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.salariesAndWages"/>
   </div>
   <div id="water-and-sewer" class="row">
     <span class="col-sm-18">Water and Sewer</span>
@@ -76,7 +76,7 @@
            id="water-and-sewer-input"
            name="water-and-sewer-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.water_and_sewer"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.waterAndSewer"/>
   </div>
   <div id="trash-removal" class="row">
     <span class="col-sm-18">Trash Removal</span>
@@ -85,7 +85,7 @@
            id="trash-removal-input"
            name="trash-removal-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.trash_removal"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.trashRemoval"/>
   </div>
   <div id="professional-fees" class="row">
     <span class="col-sm-18">Professional Fees</span>
@@ -94,7 +94,7 @@
            id="professional-fees-input"
            name="professional-fees-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.professional_fees"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.professionalFees"/>
   </div>
   <div id="advertising" class="row">
     <span class="col-sm-18">Advertising</span>
@@ -103,7 +103,7 @@
            id="advertising-input"
            name="advertising-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.advertising"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.advertising"/>
   </div>
   <div id="landscaping" class="row">
     <span class="col-sm-18">Landscaping</span>
@@ -112,7 +112,7 @@
            id="landscaping-input"
            name="landscaping-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.landscaping"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.landscaping"/>
   </div>
   <div id="capital-expenditures" class="row">
     <span class="col-sm-18">CapEx</span>
@@ -122,7 +122,7 @@
            name="capital-expenditures-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.operating_expenses_assumption.capex"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.capex"/>
   </div>
   <div id="other-expenses" class="row">
     <span class="col-sm-18">Other Expenses</span>
@@ -131,7 +131,7 @@
            id="other-expenses-input"
            name="other-expenses-input"
            format="currency"
-           ng-model="rental_property.operating_expenses_assumption.other_expenses"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.otherExpenses"/>
   </div>
   <div id="income-tax-rate" class="row">
     <span class="col-sm-18">Income Tax Rate</span>
@@ -140,6 +140,6 @@
            id="income-tax-rate-input"
            name="income-tax-rate-input"
            format="percentage"
-           ng-model="rental_property.operating_expenses_assumption.income_tax_rate"/>
+           ng-model="rentalProperty.operatingExpensesAssumption.incomeTaxRate"/>
   </div>
 </div>
