--- a/public/investment_properties_pages/financials/inputs/propertyAndLoanInformation.html
+++ b/public/investment_properties_pages/financials/inputs/propertyAndLoanInformation.html
@@ -11,7 +11,7 @@
            format="currency"
            symbol="$"
            decimals="0"
-           ng-model="rental_property.financing_and_income_assumption.land_cost"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.landCost"/>
   </div>
   <div id="building-cost" class="row">
     <span class="col-sm-18">Building Cost</span>
@@ -22,7 +22,7 @@
            format="currency"
            symbol="$"
            decimals="0"
-           ng-model="rental_property.financing_and_income_assumption.building_cost"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.buildingCost"/>
   </div>
   <div id="improvements" class="row">
     <span class="col-sm-18">Improvements</span>
@@ -33,7 +33,7 @@
            format="currency"
            symbol="$"
            decimals="0"
-           ng-model="rental_property.financing_and_income_assumption.improvements"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.improvements"/>
   </div>
   <div id="total-square-feet" class="row">
     <span class="col-sm-18">Total Square Feet</span>
@@ -42,7 +42,7 @@
            id="total-square-feet-input"
            name="total-square-feet-input"
            format="number"
-           ng-model="rental_property.financing_and_income_assumption.total_square_feet"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.totalSquareFeet"/>
   </div>
   <div id="number-of-units" class="row">
     <span class="col-sm-18">Number of Units</span>
@@ -51,7 +51,7 @@
            format="number"
            id="number-of-units-input"
            name="number-of-units-input"
-           ng-model="rental_property.financing_and_income_assumption.number_of_units"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.numberOfUnits"/>
   </div>
   <div id="average-monthly-rent" class="row">
     <span class="col-sm-18">Average Monthly Rent</span>
@@ -60,7 +60,7 @@
            id="average-monthly-rent-input"
            name="average-monthly-rent-input"
            format="currency"
-           ng-model="rental_property.financing_and_income_assumption.average_monthly_rent_per_unit"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.averageMonthlyRentPerUnit"/>
   </div>
   <div id="other-income" class="row">
     <span class="col-sm-18">Other Income</span>
@@ -69,7 +69,7 @@
            id="other-income-input"
            name="other-income-input"
            format="currency"
-           ng-model="rental_property.financing_and_income_assumption.other_monthly_income"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.otherMonthlyIncome"/>
   </div>
   <div id="equity-percentage" class="row">
     <span class="col-sm-18">Equity Percentage</span>
@@ -79,7 +79,7 @@
            name="equity-percentage-input"
            format="percentage"
            decimals="1"
-           ng-model="rental_property.financing_and_income_assumption.equity_percentage"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.equityPercentage"/>
   </div>
   <div id="loan-interest-rate" class="row">
     <span class="col-sm-18">Loan Interest Rate</span>
@@ -89,7 +89,7 @@
            name="loan-interest-rate-input"
            format="percentage"
            decimals="3"
-           ng-model="rental_property.financing_and_income_assumption.loan_interest_rate"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.loanInterestRate"/>
   </div>
   <div id="amortization-period-in-years" class="row">
     <span class="col-sm-18">Amortization Period in Years</span>
@@ -99,6 +99,6 @@
            decimals="0"
            id="amortization-period-in-years-input"
            name="amortization-period-in-years-input"
-           ng-model="rental_property.financing_and_income_assumption.amortization_period_in_years"/>
+           ng-model="rentalProperty.financingAndIncomeAssumption.amortizationPeriodInYears"/>
   </div>
 </div>
