--- a/public/investment_properties_pages/financials/outputs/costAndRevenueAssumptions.html
+++ b/public/investment_properties_pages/financials/outputs/costAndRevenueAssumptions.html
@@ -4,15 +4,15 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Land</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.land_cost | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.financingAndIncomeAssumption.landCost | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Building</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.building_cost | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.financingAndIncomeAssumption.buildingCost | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Improvements</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.improvements | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.financingAndIncomeAssumption.improvements | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Closing Costs</span>
@@ -25,11 +25,11 @@
   <br>
   <div class="row">
     <span class="col-sm-18">Number of Units</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.number_of_units | number:0}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.financingAndIncomeAssumption.numberOfUnits | number:0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Average Monthly Rent</span>
-    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.average_monthly_rent_per_unit | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{rentalProperty.financingAndIncomeAssumption.averageMonthlyRentPerUnit | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Gross Monthly Rent</span>
@@ -37,7 +37,7 @@
   </div>
   <div class="row">
     <span class="col-sm-18">Other Income</span>
-    <span class="col-sm-6 align-right add-border-bottom">{{rental_property.financing_and_income_assumption.other_monthly_income | currency:'$':0}}</span>
+    <span class="col-sm-6 align-right add-border-bottom">{{rentalProperty.financingAndIncomeAssumption.otherMonthlyIncome | currency:'$':0}}</span>
   </div>
   <div class="row">
     <span class="col-sm-18">Total Gross Monthly Income</span>
