--- a/public/investment_properties_pages/financials/outputs/keyRentRatios.html
+++ b/public/investment_properties_pages/financials/outputs/keyRentRatios.html
@@ -4,7 +4,7 @@
   </div>
   <div id="total-square-feet" class="row">
     <span class="col-sm-18">Total Square Feet</span>
-    <span class="col-sm-6 align-right">{{rental_property.financing_and_income_assumption.total_square_feet | number:0}}</span>
+    <span class="col-sm-6 align-right">{{rentalProperty.financingAndIncomeAssumption.totalSquareFeet | number:0}}</span>
   </div>
   <div id="avg-square-feet-per-unit" class="row">
     <span class="col-sm-18">Avg Sq Ft/Unit</span>
