--- a/public/investment_properties_pages/properties_list/newPropertyModal.html
+++ b/public/investment_properties_pages/properties_list/newPropertyModal.html
@@ -37,7 +37,7 @@
                          type="text"
                          name="new_property_zip"
                          placeholder="94212"
-                         ng-model="newProperty.zip_code">
+                         ng-model="newProperty.zipCode">
                 </div>
               </div>
             </td>
