--- a/public/investment_properties_pages/properties_list/rentalPropertiesList.html
+++ b/public/investment_properties_pages/properties_list/rentalPropertiesList.html
@@ -18,10 +18,10 @@
     </div>
     <div rental-property-summary="property"
         remove="remove(id)"
-        ng-repeat="property in rental_properties">
+        ng-repeat="property in rentalProperties">
     </div>
   </div>
 
-  <new-property-modal create-property="save_new_property"/>
+  <new-property-modal create-property="saveNewProperty"/>
 </div>
 
